--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
+    compileSdk 33
     defaultConfig {
         applicationId "com.hajimehoshi.goinovation"
-        minSdkVersion 16
-        targetSdkVersion 28
+        minSdkVersion 23
+        targetSdkVersion 33
         versionCode 7
         versionName '1.0.6'
     }
@@ -17,6 +17,7 @@ android {
     }
     productFlavors {
     }
+    namespace 'com.hajimehoshi.goinovation'
 }
 
 dependencies {
