--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -24,4 +24,8 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation project(':inovation')
+
+    // This line is needed to resolve a mysterious compilation error.
+    // https://stackoverflow.com/questions/75263047/duplicate-class-in-kotlin-android
+    implementation platform("org.jetbrains.kotlin:kotlin-bom:1.8.0")
 }
